--- a/index.html
+++ b/index.html
@@ -8,25 +8,31 @@
     <body>
         <div class="container">
             <div class="title"> Library App</div>
+
             <div class="formcontainer">
-                <form action="" class="form"> 
-                    <label for="booktitle">Book title</label>
-                    <input type="text" name="booktitle">
-                    <label for="bookauthor">Book author</label>
-                    <input type="text" name="author">
-                    <label for="bookpages">Book pages</label>
-                    <input type="text" name="bookpages" id="">
+                <form id="bookForm" class="form" > 
+                    <label for="booktitle"> title</label>
+                    <input id="title" type="text" name="booktitle">
+
+                    <label for="bookauthor"> author</label>
+                    <input id="author" type="text" name="bookauthor">
+
+                    <label for="bookpages"> pages</label>
+                    <input id="pages" type="text" name="bookpages" id="">
+
                     <label for="read">Check if you read this book</label>
-                    <input type="checkbox" name="read">
-                    <input type="button" value="submit">
+                    <input id="read" type="checkbox" name="read">
+                    
+                    <input id="submitForm" type="button" value="submit">
                 </form>
             </div>
+
             <div class="result">
-                <table class="resulttable">
+                <table id="result-table" class="resulttable">
                     <tr>
-                        <th>Book title</th>
-                        <th>Book author</th>
-                        <th>Book pages</th>
+                        <th> title</th>
+                        <th> author</th>
+                        <th> pages</th>
                         <th>Read</th>
                         <th>Erase</th>
                     </tr>
