--- a/index.html
+++ b/index.html
@@ -12,29 +12,30 @@
             <div class="formcontainer">
                 <form id="bookForm" class="form" > 
                     <label for="booktitle"> title</label>
-                    <input id="title" type="text" name="booktitle">
+                    <input id="title" type="text" name="booktitle" class="inputs">
 
                     <label for="bookauthor"> author</label>
-                    <input id="author" type="text" name="bookauthor">
+                    <input id="author" type="text" name="bookauthor" class="inputs">
 
                     <label for="bookpages"> pages</label>
-                    <input id="pages" type="text" name="bookpages" id="">
+                    <input id="pages" type="text" name="bookpages" class="inputs">
 
                     <label for="read">Check if you read this book</label>
-                    <input id="read" type="checkbox" name="read">
+                    <input id="read" type="checkbox" name="read" class="">
                     
-                    <input id="submitForm" type="button" value="submit">
+                    <input id="submitForm" type="button" value="submit" class="buttons">
                 </form>
             </div>
 
             <div class="result">
                 <table id="result-table" class="resulttable">
                     <tr>
-                        <th> title</th>
-                        <th> author</th>
-                        <th> pages</th>
+                        <th>Title</th>
+                        <th>Author</th>
+                        <th>Pages</th>
                         <th>Read</th>
                         <th>Erase</th>
+                        <th>Update</th>
                     </tr>
                 </table>
             </div>
