--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
             <div class="formcontainer">
                 <form id="bookForm" class="form" > 
-                    <label for="booktitle"> title</label>
+                    <label > title</label>
                     <input id="title" type="text" name="booktitle" class="inputs">
 
-                    <label for="bookauthor"> author</label>
+                    <label > author</label>
                     <input id="author" type="text" name="bookauthor" class="inputs">
 
-                    <label for="bookpages"> pages</label>
+                    <label > pages</label>
                     <input id="pages" type="text" name="bookpages" class="inputs">
 
                     <label for="read">Check if you read this book</label>
