Update main js for Newbook

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <div class="container">
             <div class="title"> Library App</div>
+            <button id="idNewBook" class="btnNewBook">NEW BOOK</button>
 
             <div class="formcontainer">
                 <form id="bookForm" class="form" > 
